last changes germany

--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -1368,6 +1368,9 @@
 		font-size: 1.125rem;
 		line-height: 156%;
 	}
+	&__video {
+		width: 100%;
+	}
 	&__decor-line {
 		width: 5rem;
 		height: 0.5rem;
