--- a/#src/css/style.css
+++ b/#src/css/style.css
@@ -172,9 +172,35 @@ p {
   letter-spacing: 0.03rem;
 }
 
+@media all and (max-width: 767px) {
+  p {
+    line-height: 150%;
+  }
+}
+
 .title {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
+}
+
+.desktop {
+  display: block;
+}
+
+@media all and (max-width: 767px) {
+  .desktop {
+    display: none;
+  }
+}
+
+.mobile {
+  display: none;
+}
+
+@media all and (max-width: 767px) {
+  .mobile {
+    display: block;
+  }
 }
 
 .header {
