--- a/#src/css/country.css
+++ b/#src/css/country.css
@@ -210,6 +210,8 @@ p {
   font-size: 1rem;
   z-index: 999;
   background: #0A7990;
+  -webkit-filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.5));
   /* Media Queries
 	--------------------------------------------- */
 }
