--- a/scss/country.scss
+++ b/scss/country.scss
@@ -17,6 +17,7 @@
 	font-size: 1rem;
 	z-index: 999;
 	background: $pryme-alt;
+	filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.5));
 	&__logo-link {
 		min-width: 10rem;
 		margin-right: 0.5rem;
