--- a/css/country.css
+++ b/css/country.css
@@ -279,7 +279,7 @@ p {
   background-size: 1.0625rem 0.8125rem;
   height: 0.8125rem;
   width: 1.0625rem;
-  margin: 0.22rem 0.4125rem 0 0;
+  margin: 0.4rem 0.4125rem 0 0;
 }
 
 .header__phone:before {
@@ -1092,6 +1092,15 @@ p {
   }
 }
 
+.from-germany__main-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+
 .from-germany__text-wrap {
   padding: 7rem 0 7rem;
   max-width: 40rem;
@@ -1115,29 +1124,6 @@ p {
   .from-germany__text-wrap {
     padding: 2rem 0 6rem;
   }
-}
-
-.from-germany__slide {
-  position: relative;
-  width: 100%;
-  display: block;
-  z-index: 1;
-}
-
-.from-germany__slide--1 {
-  background: url(../img/auto_bg.jpg) center/cover no-repeat;
-}
-
-.from-germany__slide--2 {
-  background: url(../img/airplane_bg.jpg) center/cover no-repeat;
-}
-
-.from-germany__slide--3 {
-  background: url(../img/train_bg.jpg) center/cover no-repeat;
-}
-
-.from-germany__slide--4 {
-  background: url(../img/ship_bg2.jpg) center/cover no-repeat;
 }
 
 .from-germany__slide-mob {
@@ -1171,7 +1157,7 @@ p {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media all and (max-width: 1240px) {
@@ -1197,7 +1183,14 @@ p {
 
 @media all and (max-width: 1699px) {
   .from-germany__title {
-    font-size: 3rem;
+    font-size: 2.8rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+@media all and (max-width: 1240px) {
+  .from-germany__title {
+    font-size: 2rem;
   }
 }
 
@@ -1282,10 +1275,17 @@ p {
   z-index: 3;
 }
 
+@media all and (max-width: 1699px) {
+  .from-germany__info-block {
+    padding: 2rem 1.5rem 2rem 2rem;
+    margin: 1rem 0 6rem 6.25rem;
+  }
+}
+
 @media all and (max-width: 1240px) {
   .from-germany__info-block {
     margin: 0;
-    padding: 1.5rem 0.5rem 1.5rem 1.5rem;
+    padding: 1.5rem 0.5rem 1rem 1rem;
     max-width: 34rem;
   }
 }
@@ -1326,6 +1326,12 @@ p {
   font-weight: 600;
 }
 
+@media all and (max-width: 1240px) {
+  .from-germany__info-title {
+    font-size: 1.5rem;
+  }
+}
+
 @media all and (max-width: 767px) {
   .from-germany__info-title {
     font-size: 1.25rem;
@@ -1338,11 +1344,24 @@ p {
   font-size: 1.125rem;
 }
 
+@media all and (max-width: 1240px) {
+  .from-germany__info-text {
+    font-size: 1rem;
+    margin-top: 1rem;
+  }
+}
+
 @media all and (max-width: 767px) {
   .from-germany__info-text {
     font-size: 0.875rem;
     margin-top: 1rem;
   }
+}
+
+.from-germany__img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .import {
@@ -1481,8 +1500,15 @@ p {
 
 .import__table-title {
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: bold;
   margin-bottom: 1.25rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+@media all and (max-width: 1240px) {
+  .import__table-title {
+    font-size: 1.1rem;
+  }
 }
 
 @media all and (max-width: 767px) {
@@ -2493,6 +2519,18 @@ p {
   overflow: hidden;
 }
 
+.spec__main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .spec__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2503,6 +2541,11 @@ p {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 50%;
 }
 
 .spec__left {
@@ -2515,7 +2558,7 @@ p {
 
 .spec__title {
   font-size: 3.125rem;
-  margin: 0 0 1.5rem;
+  margin: 0 0 2.5rem;
   position: relative;
 }
 
@@ -2542,13 +2585,18 @@ p {
 }
 
 .spec__text {
-  margin-top: 2rem;
+  margin-bottom: 2rem;
   max-width: 36.25rem;
+  font-size: 1.125rem;
+}
+
+.spec__text:last-child {
+  margin-bottom: 0rem;
 }
 
 .spec__map {
-  margin-top: 3.2rem;
-  width: 100%;
+  width: 50%;
+  height: 412px;
 }
 
 .transport {
@@ -2922,12 +2970,10 @@ p {
 .info__left {
   width: 100%;
   max-width: 36.2rem;
-  margin-left: 8rem;
 }
 
 @media all and (max-width: 1240px) {
   .info__left {
-    margin-left: 1rem;
     max-width: 55rem;
   }
 }
